--- a/views/getMyRecords.ejs
+++ b/views/getMyRecords.ejs
@@ -4,6 +4,7 @@
 
 <script src="bundle.js"></script><!--To use Eth-Crypto library to decrypt data-->
 <script src="getmyrecords.js"></script><!--the js script for the page-->
+<script src="qrcode.min.js"></script>
 
 <!-- Bootstrap links below -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -19,4 +20,7 @@
 </div>
 <button type="button" class="btn btn-dark btn-lg col-sm-3" onclick="display()">Display my record</button>
 <label id="report" class="col-sm-6"></label>
+
+<canvas id="canvas"></canvas>
+
 </div>
